Hero are rady to push

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style/style.css">
   <title>Assignment-01</title>
 </head>
 
@@ -11,10 +12,18 @@
   <!-- header are  -->
 
   <header>
-
   </header>
+
   <!-- main are  -->
   <main>
+    <section class="Hero_are">
+      <div class="Hero_are_info">
+        <img src="assets/Group.png" alt="img">
+        <h2>"In the near future, I hope to become a Developer."</h2>
+        <p>And I believe that with hard work I will reach my goals and organize my time like a Dream</p>
+      </div>
+    </section>
+
 
   </main>
   <!-- footer are  -->
