main are rady to push

--- a/index.html
+++ b/index.html
@@ -21,6 +21,57 @@
         <img src="assets/Group.png" alt="img">
         <h2>"In the near future, I hope to become a Developer."</h2>
         <p>And I believe that with hard work I will reach my goals and organize my time like a Dream</p>
+        <button class="btn">Contact with me</button>
+      </div>
+    </section>
+    <!-- main are  -->
+
+    <section class="main">
+      <div class="mian_info">
+        <div class="main_info_are">
+          <h2>Why Web Development??</h2>
+          <p>Web developers enjoy high levels of job flexibility, with options to work as salaried employees,
+            freelancers, or
+            business owners in almost any industry. Web development offers a strong community and teamwork
+            opportunities, with
+            various online and offline resources for networking and problem-solving.</p>
+        </div>
+
+        <div class="main_info_card">
+          <div class="main_caption1">
+            <div class="main_caption_text">
+              <h3>I will Do Coding and Change The World</h3>
+              <p>Because coding is the medium of expression in the modern world</p>
+              <button>Learn More</button>
+            </div>
+            <div class="main_caption_img1">
+              <img src="./assets/Layer_1.png" alt="img">
+            </div>
+          </div>
+          <div class="main_caption2">
+            <div class="main_caption_img2">
+              <img src="./assets/Group 4.png" alt="">
+            </div>
+            <div class="main_caption_text">
+              <h3>I will Do Coding and Change The World</h3>
+              <p>Because coding is the medium of expression in the modern world</p>
+              <button>Learn More</button>
+            </div>
+          </div>
+          <div class="main_caption3">
+            <div class="main_caption_text">
+              <h3>I will Do Coding and Change The World</h3>
+              <p>Because coding is the medium of expression in the modern world</p>
+              <button>Learn More</button>
+            </div>
+            <div class="main_caption_img3">
+              <img src="./assets/Group 3.png" " alt="">
+              </div>
+          </div>
+        </div>
+
+
+
       </div>
     </section>
 
