Inspiration are redy to push

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button class="btn">Contact with me</button>
       </div>
     </section>
+
     <!-- main are  -->
 
     <section class="main">
@@ -36,7 +37,6 @@
             opportunities, with
             various online and offline resources for networking and problem-solving.</p>
         </div>
-
         <div class="main_info_card">
           <div class="main_caption1">
             <div class="main_caption_text">
@@ -69,13 +69,26 @@
               </div>
           </div>
         </div>
-
-
-
       </div>
     </section>
 
+    <!-- My Inspiration   are-->
+     <section class=" Inspiration">
+              <div class="Inspiration_caption">
+                <h3>My Inspiration</h3>
+                <p>My inspiration is my elder brother who gave me the knowledge about various technologies in this
+                  sector and gave me the
+                  confidence and spirit to move forward.</p>
+              </div>
+              <div class="Inspiration_vedio">
+                <iframe aria-controls="" width="1076px" height="550px" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=KT8l3m6-crolvWAC"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+              </div>
+
+    </section>
   </main>
   <!-- footer are  -->
   <footer>
