Current Targe are rady to pusht

--- a/index.html
+++ b/index.html
@@ -85,8 +85,40 @@
                   title="YouTube video player" frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
               </div>
+    </section>
+    <!-- My Current Target  -->
+
+    <section class=" Current_Target">
+      <div class="My_target_caption">
+        <h3>MERN Stack Explained</h3>
+        <p>I want to be a skilled Font-End Developer</p>
+      </div>
+      <div class="Current_Target_skills">
+
+        <div class="skill html">
+          <img src="./assets/html.png" alt="html">
+          <h5>HTML</h5>
+          <p>stands for Hyper Text Markup Language; HTML is the standard markup language ...</p>
+          <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">Learn More</a>
+        </div>
+        
+        <div class="skill css">
+          <img src="./assets/css.png" alt="css">
+          <h5>CSS</h5>
+          <p>CSS stands for Cascading Style Sheets; CSS describes how HTML elements are to be displayed on ...</p>
+          <a href="https://www.w3schools.com/css/css_howto.asp" target="_blank">Learn More</a>
+        </div>
+        <div class="skill js">
+          <img src="./assets/js.png" alt="js">
+          <h5>JS</h5>
+          <p>JavaScript is the Programming Language for the Web.by which By which is a website font-end and back-end
+          can be coded....</p>
+          <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
+        </div>
+
+      </div>
+
 
     </section>
   </main>
