Support  are rady to push

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                   confidence and spirit to move forward.</p>
               </div>
               <div class="Inspiration_vedio">
-                <iframe aria-controls="" width="1076px" height="550px" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=KT8l3m6-crolvWAC"
-                  title="YouTube video player" frameborder="0"
+                <iframe aria-controls="" width="1076px" height="550px"
+                  src="https://www.youtube.com/embed/DGHn2uOAVCE?si=KT8l3m6-crolvWAC" title="YouTube video player"
+                  frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
@@ -95,14 +96,12 @@
         <p>I want to be a skilled Font-End Developer</p>
       </div>
       <div class="Current_Target_skills">
-
         <div class="skill html">
           <img src="./assets/html.png" alt="html">
           <h5>HTML</h5>
           <p>stands for Hyper Text Markup Language; HTML is the standard markup language ...</p>
           <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">Learn More</a>
         </div>
-        
         <div class="skill css">
           <img src="./assets/css.png" alt="css">
           <h5>CSS</h5>
@@ -113,14 +112,26 @@
           <img src="./assets/js.png" alt="js">
           <h5>JS</h5>
           <p>JavaScript is the Programming Language for the Web.by which By which is a website font-end and back-end
-          can be coded....</p>
+            can be coded....</p>
           <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
         </div>
-
       </div>
-
-
     </section>
+
+    <!-- Support are  -->
+    <section class="need_Support">
+      <div class="nedd_info">
+        <div class="need_Support_caption">
+          <h2>I need Support</h2>
+          <p>We will try our best to assist you and get you up to speed as soon as possibles!</p>
+        </div>
+        <div class="need_Support_input">
+          <input type="text" placeholder="Suggest  me any feedback for me">
+          <button>Submit</button>
+        </div>
+      </div>
+    </section>
+
   </main>
   <!-- footer are  -->
   <footer>
