footer are rady to push

--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@
 
   </main>
   <!-- footer are  -->
-  <footer>
+  <footer class="footer">
+
+    <div class="footer_caption">
+      <p>An Open Commitment by MD.Himel Mai</p>
+    </div>
+    <div class="footer_logo">
+      <a href="https://www.facebook.com/login/" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+      <a href="https://github.com/login" target="_blank"><img src="./assets/github.png" alt=""></a>
+      <a href="https://www.linkedin.com/login/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+    </div>
+
 
   </footer>
 
