implement nav section added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
   <!-- header are  -->
 
-  <header>
-  </header>
+<header>
+        <ul class="header">
+          <li class="logo"><a href="/">Md .Himel</a></li>
+          <button >Download Resume</button>
+        </ul>
+</header>
 
   <!-- main are  -->
   <main>
@@ -21,7 +25,7 @@
         <img src="assets/Group.png" alt="img">
         <h2>"In the near future, I hope to become a Developer."</h2>
         <p>And I believe that with hard work I will reach my goals and organize my time like a Dream</p>
-        <button class="btn">Contact with me</button>
+        <a href="#footer"><button class="btn">Contact with me</button></a>
       </div>
     </section>
 
@@ -134,7 +138,7 @@
 
   </main>
   <!-- footer are  -->
-  <footer class="footer">
+  <footer id="footer">
 
     <div class="footer_caption">
       <p>An Open Commitment by MD.Himel Mai</p>
